--- a/.env.example
+++ b/.env.example
@@ -10,16 +10,18 @@ SUPABASE_URL=https://your-project-id.supabase.co
 SUPABASE_KEY=your_supabase_anon_key_here
 
 # Payment Provider Configuration
-# Enabled providers: telegram_stars,paypal,stripe
+# Primary providers for Belarus: telegram_stars,paypal
 ENABLED_PAYMENT_PROVIDERS=telegram_stars,paypal
 PRIMARY_PAYMENT_PROVIDER=telegram_stars
 
-# PayPal Configuration (for sandbox testing first)
+# PayPal Configuration
+# Get these from https://developer.paypal.com/
 PAYPAL_CLIENT_ID=your_paypal_client_id
 PAYPAL_CLIENT_SECRET=your_paypal_client_secret
+# For testing use sandbox, for production use live
 PAYPAL_BASE_URL=https://api-m.sandbox.paypal.com
 
-# Stripe Configuration (optional - can be left empty if not using Stripe)
+# Stripe Configuration (optional - leave empty if not using)
 STRIPE_SECRET_KEY=
 STRIPE_PUBLISHABLE_KEY=
 STRIPE_WEBHOOK_SECRET=
